# pcl_nimbus_dev

./: .gitignore  .gitmodules  README.md
normal estimation/: CMakeLists.txt  cube.ply  cylinder.ply
normal estimation/include/: websocket.h
normal estimation/src/: main.cpp  openni_grabber.cpp  rangeImage.cpp  testSeg.cpp  testing.cpp  websocket.cpp
socket_test/src/: test.cpp
test/: CMakeLists.txt
test/src/: .pcd_write.cpp.swp  pcd_write.cpp
visual_test/: CMakeLists.txt  radials.txt
visual_test/include/: websocket.h
visual_test/src/: main.cpp  websocket.cpp
visualization_examples/src/: main.cpp
visualization_test/: CMakeLists.txt
visualization_test/src/: main.cpp
webSocket_test/: CMakeLists.txt
webSocket_test/includes/: websocket.h
webSocket_test/src/: main.cpp  test.cpp  websockTest.cpp  websocket.cpp
